# LyTomo_Watershed

./: .gitignore  .gitmodules  CookBook.ipynb  FGPA_Hydro.ipynb  KDE_mean_std.ipynb  LICENSE  M0_Mtomo.ipynb  MDM_Mtomo.ipynb  Notebook.mystyle  README.md  get_data.py  justify_watershed.ipynb  paper.mystyle  power_spec.ipynb  run_FGPA.py  select_kappa_nu.ipynb  setup.cfg  setup.py
.github/workflows/: python-publish.yml
codes/: fgpa.py  halos.py  minima.py  plot_simulation.py  spectra_mocking.py
helper_scripts/: compare_fgpa_hydro.py  rand_seed_spectra.txt
helper_scripts/DensityField/: mpi_submit_2.2  mpi_submit_2.3  mpi_submit_2.4  mpi_submit_2.6  mpi_submit_dens  run_density.py  run_get_densityfield.py
helper_scripts/FGPA/: mpi_submit_FGPA  run_FGPA.py
helper_scripts/dachshund/: TNG_z2.4_n1.cfg  submit_z2.4
helper_scripts/descendants/: run_find_halos.py  run_find_roots.py  run_find_voted_FOF_roots.py
helper_scripts/generate_spectra/: mpi_submit_grid  mpi_submit_z2.2  mpi_submit_z2.3  mpi_submit_z2.4  mpi_submit_z2.6  parallel_grid.py  parallel_spectra.py
helper_scripts/progenitors/: clusters_TNG300-1.hdf5  cofm_progenitors.py  mpi_submit  mpi_submit_find_roots  mpi_submit_organize_map  mpisubmit_prog  progenitor_map.py  progenitor_parallel.py  progenitor_particles.py  slurm-7468121.out
notebooks/: CookBook.ipynb  FGPA_Hydro.ipynb  M0_Mtomo.ipynb  MDM_Mtomo.ipynb  Notebook.mystyle  environments.ipynb  justify_watershed.ipynb  positional_error.ipynb  power_spec.ipynb  select_kappa_nu.ipynb
tests/: test_boundary_condition_label.py  test_mpi4py_helper.py
(+23 files in other folders)
