[metadata]
name = lytomo_watershed
version = 0.2.0
author = Mahdi Qezlou, Drew Newman, Gwen Rudie, Simeon Bird
author_email = mahdi.qezlou@email.ucr.edu
description = Detection of protoclusters in Ly-alpha tomography surveys
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahdiqezlou/LyTomo_Watershed
project_urls =
    Bug Tracker = https://github.com/mahdiqezlou/LyTomo_Watershed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
